objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Opted_In__c</fullName>
        <label>Total Opted In</label>
        <summaryFilterItems>
            <field>Communication_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Opt In</value>
        </summaryFilterItems>
        <summaryForeignKey>Communication_List__c.Communication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Opted_Out__c</fullName>
        <label>Total Opted Out</label>
        <summaryFilterItems>
            <field>Communication_List__c.Status__c</field>
            <operation>equals</operation>
            <value>Opt Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Communication_List__c.Communication__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Communication</label>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>